--- a/frontend/src/Components/HomePage/SaleForm/SaleForm.module.css
+++ b/frontend/src/Components/HomePage/SaleForm/SaleForm.module.css
@@ -3,6 +3,7 @@
     border-radius: 1rem;
     padding-right: 2rem;
     padding-top: 2rem;
+    margin-bottom: 80px;
 }
 
 .h2{
@@ -65,6 +66,7 @@
     border: 1px solid white;
     border-radius: 0.375rem;
 
+    margin-top: 1rem;
     font-weight: 600;
     color: #424436;
     background-color: #FFFFF1;
