Добавлены страницы продуктов. Небольшие фиксы

--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -21,3 +21,11 @@
     margin-left: 2.5rem;
     margin-right: 2.5rem;
 }
+
+/* .header-h2{
+    color: #424436;
+    font-size: "4rem";
+    font-weight: "700";
+    margin-right: "2rem";
+} */
+
