--- a/frontend/src/Components/Footer/Footer.module.css
+++ b/frontend/src/Components/Footer/Footer.module.css
@@ -70,3 +70,4 @@ iframe {
     margin: 32px 0 0; /* Отступ сверху */
     border-radius: 14px; /* Закругленные углы */
 }
+/* media запросы добавить со старого css */
