--- a/frontend/src/Components/HomePage/Categories/Categories.module.css
+++ b/frontend/src/Components/HomePage/Categories/Categories.module.css
@@ -1,15 +1,10 @@
 .categoriesContainer {
-  position: relative; /* Устанавливаем позиционирование для контейнера */
-  width: 100%; /* Ширина контейнера на 100% для адаптивности */
-  /* max-width: 1360px; Максимальная ширина контейнера /this was a problem of location of my container*/
-  height: auto; /* Высота контейнера автоматически подстраивается под содержимое */
-  top: 20px; /* Уменьшили отступ сверху */
-  left:auto; /* Убираем отступ слева */
-  padding: 20px;
- font-family: Arial, sans-serif;
-  margin: 0 auto; /* Центрируем контейнер */
-}
-
+  max-width: 130rem;
+    margin: 0 auto;
+    padding: 1.25rem; /* 20px */
+    flex-wrap: wrap; /* Позволяем изображениям переноситься на новую строку flex-wrap: wrap; позволяет элементам переноситься на следующую строку. Это особенно полезно для адаптивного дизайна, когда ширина экрана может изменяться (например, на мобильных устройствах).*/
+  }
+ 
 .categoriesContent {
   max-width: 1360px; /* Максимальная ширина контента */
   margin: 0 auto;
@@ -71,18 +66,21 @@
 }
 
 .categoriesText {
-  font-size: 18px;
-  font-weight: 400; /* Changed from bold to 400 to make each category name bold */
-  margin: 12px 0 4px;
+  margin: 0 2.5rem 2.5rem ;
+  display: flex;
+  justify-content: center;
+  /* text in center gorizontal */
+  text-align: center;
+  /* text in center vertical */
+  font-weight: 400;
+  /* 400 makes them bold/не яркий текст */
 }
-
 .imgCategory {
-  width: 100%; /* Занимает всю ширину родительского элемента */
-  height: 200px; /* Фиксированная высота для всех изображений */
-  object-fit: cover; /* Сохраняем пропорции изображения и обрезаем его/поэтому у меня was not right img size */
-  border-radius: 5px; /* Закругленные углы изображения */
+  width: 100%;
+  height: 24.5rem; /* 392px */
+  object-fit: cover;
+  border-radius: 1rem;
 }
-
 /* медиа запросы для адаптивности */
 @media (max-width: 1440px) {
   .categoriesItem {
