--- a/frontend/src/Components/Categories/CategoryProductPage.module.css
+++ b/frontend/src/Components/Categories/CategoryProductPage.module.css
@@ -2,31 +2,45 @@
   /* Основной контейнер */
   /* bread crumbs легче навигация по сайту  */
   /* Навигация в виде кнопок */
-.breadcrumbs {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 15px;
-}
-
-.breadcrumbButton {
-  background-color: #DDDDDD;
-  color: white;
-  border: none;
-  padding: 8px 12px;
-  font-size: 14px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.2s;
-}
-
-.breadcrumbButton:hover {
-  background-color: #0056b3;
-}
-
-.breadcrumbButton:disabled {
-  background-color: #ccc;
-  cursor: default;
-}
+  .breadcrumbs {
+    display: flex;
+    align-items: center; /* Центрирование по вертикали */
+  }
+  
+  .breadcrumbButton {
+    background-color: transparent; /* Прозрачный фон */
+    border: 1px solid #DDDDDD; /* Рамка цвета #DDDDDD */
+    color: #424436; /* Цвет текста по умолчанию */
+    cursor: pointer; /* Указатель при наведении */
+    padding: 10px 15px; /* Отступы для кнопок */
+    font-size: 16px; /* Размер шрифта */
+    text-decoration: none; /* Убираем подчеркивание */
+    border-radius: 4px; /* Закругленные углы */
+    transition: border-color 0.3s; /* Плавный переход для рамки */
+  }
+  
+  .lightText {
+    color: #a0a0a0; /* Светлый цвет текста для кнопок */
+  }
+  
+  .lightText:hover {
+    border-color: #424436; /* Цвет рамки при наведении */
+  }
+  
+  .darkText {
+    color: #000000; /* Темный цвет текста для текущей категории */
+  }
+  
+  .darkText:hover {
+    border-color: #424436; /* Цвет рамки при наведении */
+  }
+  
+  .separator {
+    width: 20px; /* Ширина линии */
+    height: 1px; /* Высота линии */
+    background-color: #DDDDDD; /* Цвет линии */
+    margin: 0; /* Убираем отступы */
+  }
   /* Стиль для кнопки "Back to Categories" */
   /* .backButton {
     background: none;
