--- a/frontend/src/Components/ProductPage/ProductPage.module.css
+++ b/frontend/src/Components/ProductPage/ProductPage.module.css
@@ -36,7 +36,7 @@
 
 .productPage h2 {
   font-size: 20px; /* Размер шрифта для подзаголовков */
-  color: #28a745; /* Зеленый цвет для цены или распродажи */
+  color: #92A134; /* Зеленый цвет для цены или распродажи */
 }
 
 .productPage .sale {
@@ -48,7 +48,7 @@
   padding: 10px 15px; /* Отступы для кнопок */
   font-size: 16px; /* Размер шрифта для кнопок */
   color: #FFFFFF; /* Цвет текста для кнопок */
-  background-color: #28a745; /* Зеленый цвет фона для кнопок */
+  background-color: #92A134; /* Зеленый цвет фона для кнопок */
   border: none; /* Без рамки */
   border-radius: 5px; /* Закругленные углы для кнопок */
   cursor: pointer; /* Указатель курсора при наведении */
