--- a/frontend/src/Components/CardHolder/CardHolder.module.css
+++ b/frontend/src/Components/CardHolder/CardHolder.module.css
@@ -14,6 +14,13 @@
     align-items: center;
 }
 
+.title h2{
+    color: #424436;
+    font-size: 4rem;
+    font-weight: 700;
+    margin-right: 2rem;
+}
+
 .navButton{
     cursor: pointer;
     padding: 0.5rem 1rem;
@@ -26,3 +33,25 @@
     font-weight: 500;;
 }
 
+@media(max-width: 1000px){
+    .cardHolder{
+        margin: 0 1rem;
+        gap: 1rem;
+    }
+    .title{
+        margin: 0 1rem 1rem
+    }
+}
+@media(max-width: 768px){
+    .cardHolder{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media(max-width: 480px){
+    .cardHolder{
+        grid-template-columns: 1fr;
+    }
+    .title h2{
+        font-size: 3rem;
+    }
+}
