--- a/frontend/src/Components/Header/Header.module.css
+++ b/frontend/src/Components/Header/Header.module.css
@@ -35,4 +35,90 @@
     height: 3rem;
 }
 
+.counter{
+    position: absolute;
+    color: white;
+    width: 1.625rem;
+    height: 1.625rem;
+    border-radius: 50%;
+    background-color: #92A134;
+    font-size: 0.75rem;
+    text-align: center;
+    padding-top: 0.373rem;
+    top: 0.5rem;
 
+}
+
+
+/* адаптивность */
+.hamburger {
+    display: none;
+    flex-direction: column;
+    gap: 0.5rem;
+    cursor: pointer;
+}
+
+.hamburger div {
+    width: 2.5rem;
+    height: 0.25rem;
+    background-color: #424436;
+    border-radius: 2px;
+}
+
+/* Прячем навигацию */
+@media (max-width: 768px) {
+    .header{
+        padding: 0 1rem;
+        height: 6rem;
+    }
+    .nav {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        justify-content: flex-start;
+        gap: 2rem;
+        top: 0;
+        right: 0;
+        background: #FFFFF1;
+        font-size: 1.5rem;
+        height: 100vh;
+        width: 65%;
+        padding: 100px 2rem 2rem 2rem;
+    }
+
+    .nav.open {
+        display: flex; 
+        
+    }
+
+    .hamburger {
+        display: flex;
+        margin-left: 2rem;
+    }
+
+    nav.open {
+        position: fixed;
+        width: 100%;
+        left: 0;
+        top: 0;
+        background-color: #0000001A;
+        height: 100%;
+        z-index: 100;
+    }
+}
+.hamburgerHolder{
+    display: flex;
+    align-items: center;
+}
+
+.crossBtn {
+    font-size: 8rem;
+    color:#424436;
+    font-weight: 200;
+    position: absolute;
+    top: 2rem;
+    right:2rem;
+    cursor: pointer;
+    width:fit-content;
+    line-height: 4rem;
+}
