--- a/frontend/src/Components/ProductCard/ProductCard.module.css
+++ b/frontend/src/Components/ProductCard/ProductCard.module.css
@@ -2,7 +2,7 @@
 .container{
     overflow: hidden;
     width: 100%;
-    max-width: 19.75rem;
+    /* max-width: 19.75rem; */
     height: 26.375rem;
     border: 1px solid #DDDDDD;
     border-radius: 1rem;
@@ -52,13 +52,37 @@
     position: absolute;
     top: 1rem;
     right: 1rem;
-    border: 1px solid rgba(0,0,0,0.2);
+    /* border: 1px solid rgba(0,0,0,0.2); */
     
 }
 
+.addToCart{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 16px;
+    width: 90%;
+    height: 3.675rem;
+    background-color: #F26D22;
+    border-radius: 0.5rem;
+    color: white;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    font-size: 1.25rem;
+    font-weight: 600;;
 
+}
 
+.container:hover .addToCart{
+    opacity: 1;
+}
 
+.addToCart:active{
+    background-color:#424436 ;
+}
 
 
 
